--- a/locale/ja/LC_MESSAGES/django.po
+++ b/locale/ja/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-05-27 05:09+0900\n"
+"POT-Creation-Date: 2021-05-29 12:53+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,6 +23,5 @@ msgid "keju"
 msgstr "科挙"
 
 #: .\keju\templates\keju\index.html:11
-msgid "Master Maintenance"
-msgstr "マスタメンテ"
-
+msgid "Public Salary Table Calculation"
+msgstr "給与計算"
